# statcan-rag

./: .gitignore  Makefile  pyproject.toml
scripts/: index_daily.py  seed_tables.py
src/analytics/: analyzer.py  chart_generator.py  insights.py  transformer.py
src/api/: main.py  routes.py  schemas.py
src/data/: cache.py  daily_scraper.py  models.py  statcan_client.py  table_registry.py
src/frontend/: app.py
src/frontend/components/: charts.py  chat.py  header.py  sources.py
src/frontend/styles/: custom.css
src/llm/: citations.py  claude_client.py  gemma_client.py  orchestrator.py  prompts.py  tools.py
src/rag/: chunker.py  embeddings.py  indexer.py  retriever.py  vectorstore.py
tests/: test_analytics.py  test_orchestrator.py  test_retriever.py  test_statcan_client.py
